@@ -1,3 +1,9 @@
+2009-07-14  Nick Clifton  <nickc@redhat.com>
+
+	PR 10387
+	* config/tc-arm.h (THUMB_IS_FUNC): Handle a NULL pointer.
+	(ARM_IS_FUNC): Likewise.
+
 2009-07-14  Daniel Gutson  <dgutson@codesourcery.com>
 
 	* config/tc-arm.c (md_assemble): Added validation.
